Remove unused global option

--- a/CG2023_cheatsheet.tex
+++ b/CG2023_cheatsheet.tex
@@ -1,4 +1,4 @@
-\documentclass[6pt,landscape,a4paper]{extarticle}
+\documentclass[landscape,a4paper]{extarticle}
 \usepackage{relsize}
 \usepackage{caption}
 \usepackage{multicol}
