--- a/CG2023_cheatsheet.tex
+++ b/CG2023_cheatsheet.tex
@@ -1,3 +1,4 @@
+% TODO: definition of convolution
 \documentclass[landscape,a4paper]{extarticle}
 \usepackage{relsize}
 \usepackage{caption}
@@ -479,7 +480,7 @@
     \[
         \text{comb}_\lambda(t) \triangleq \sum_n\delta(t-n\lambda)
     \]
-
+    \newline
     \[
         c_k=\frac{1}{\lambda}
     \]
