Add negative time and freq shifting

--- a/CG2023_cheatsheet.tex
+++ b/CG2023_cheatsheet.tex
@@ -324,10 +324,18 @@
         x(t-t_0) \rightleftarrows X(f)e^{-j2\pi ft_0} \tag{4.5}
     \]
 
+    \[
+        x(t+t_0) \rightleftarrows X(f)e^{j 2 \pi f t_0}
+    \]
+
     \textbf{Frequency Shifting (Modulation)}
 
     \[
         x(t)e^{j2\pi f_0t} \rightleftarrows X(f-f_0) \tag{4.6}
+    \]
+
+    \[
+        x(t)e^{-j2\pi f_0t} \rightleftarrows X(f+f_0)
     \]
 
     \textbf{Differentiation in the Time Domain}
