Add delta comb func ss

--- a/CG2023_cheatsheet.tex
+++ b/CG2023_cheatsheet.tex
@@ -497,7 +497,12 @@
     \[
         \text{comb}_\lambda(t) \triangleq \sum_n\delta(t-n\lambda)
     \]
-    \newline
+
+    \begin{Figure}
+        \centering
+        \includegraphics[width=\linewidth]{images/comb.png}
+    \end{Figure}
+
     \[
         c_k=\frac{1}{\lambda}
     \]
