Add more random stuff

--- a/CG2023_cheatsheet.tex
+++ b/CG2023_cheatsheet.tex
@@ -691,7 +691,6 @@
     \]
 
     \textbf{Random stuff}
-    
     \begin{align*}
         \angle j 2\pi f &= \tan^{-1}\left(\frac{2\pi f}{0}\right)\\
         &= \begin{cases}
@@ -704,6 +703,14 @@
         \end{cases}\\
         &= 0.5\pi \sgn(f)
     \end{align*}
+
+    \begin{itemize}
+        \item Only 2 factors affect total energy: time scaling and amplitude
+        \item A signal is real if each complex component got its conjugate then can add tgt
+        \item DC value refers to the constant or average component of a signal over time, which is $c_0$ in periodic signals
+        \item ESD PSD disjoint
+        \item Index in time domain use $n$, in freq domain use $k$
+    \end{itemize}
 
 \end{multicols*}
 \end{document}
