--- a/midterms/CG2023_cheatsheet.tex
+++ b/midterms/CG2023_cheatsheet.tex
@@ -106,37 +106,37 @@
     \textbf{u(t):}
     \begin{Figure}
         \centering
-        \includegraphics[width=0.8\linewidth]{../images/unitStep.png}
+        \includegraphics[width=0.8\linewidth]{unitStep.png}
     \end{Figure}
     \textbf{sgn(t):}
     \begin{Figure}
         \centering
-        \includegraphics[width=0.8\linewidth]{../images/signum.png}
+        \includegraphics[width=0.8\linewidth]{signum.png}
     \end{Figure}
     \textbf{rect$\left( \frac{t}{T}\right)$:}
     \begin{Figure}
         \centering
-        \includegraphics[width=0.8\linewidth]{../images/rect.png}
+        \includegraphics[width=0.8\linewidth]{rect.png}
     \end{Figure}
     \textbf{tri$\left( \frac{t}{T}\right)$:}
     \begin{Figure}
         \centering
-        \includegraphics[width=0.8\linewidth]{../images/tri.png}
+        \includegraphics[width=0.8\linewidth]{tri.png}
     \end{Figure}
     \textbf{sinc$\left(\frac{t}{T}\right)$:}
     \begin{Figure}
         \centering
-        \includegraphics[width=0.8\linewidth]{../images/sinc.png}
+        \includegraphics[width=0.8\linewidth]{sinc.png}
     \end{Figure}
     \textbf{$e^{-\alpha t}u(t)$: }
     \begin{Figure}
         \centering
-        \includegraphics[width=0.8\linewidth]{../images/rightSidedDecayingExp.png}
+        \includegraphics[width=0.8\linewidth]{rightSidedDecayingExp.png}
     \end{Figure}
     \textbf{$e^{-\alpha |t|}$: }
     \begin{Figure}
         \centering
-        \includegraphics[width=0.8\linewidth]{../images/twoSidedDecayingExp.png}
+        \includegraphics[width=0.8\linewidth]{twoSidedDecayingExp.png}
     \end{Figure}
     \textbf{Sinusoidal signals}
     \begin{align*}
@@ -426,11 +426,11 @@
     By duality, $\Im\{K\}=K\delta(f)$
     \begin{Figure}
         \centering
-        \includegraphics[width=0.8\linewidth]{../images/fourierOfImpulse.png}
+        \includegraphics[width=0.8\linewidth]{fourierOfImpulse.png}
     \end{Figure}
     \begin{Figure}
         \centering
-        \includegraphics[width=0.8\linewidth]{../images/fourierOfConstant.png}
+        \includegraphics[width=0.8\linewidth]{fourierOfConstant.png}
     \end{Figure}
 
     \textbf{4.4.1 Spectrm of Unit Step and Signum function}
@@ -456,7 +456,7 @@
     \end{align*}
     \begin{Figure}
         \centering
-        \includegraphics[width=0.8\linewidth]{../images/continuousSpectrum_DC.png}
+        \includegraphics[width=0.8\linewidth]{continuousSpectrum_DC.png}
     \end{Figure}    
     \textbf{Complex Exponential}
     \begin{align*}
@@ -465,7 +465,7 @@
     \end{align*}
     \begin{Figure}
         \centering
-        \includegraphics[width=0.8\linewidth]{../images/continuousSpectrum_complexExponential.png}
+        \includegraphics[width=0.8\linewidth]{continuousSpectrum_complexExponential.png}
     \end{Figure}
     \textbf{Cosine}
     \begin{align*}
@@ -474,7 +474,7 @@
     \end{align*}
     \begin{Figure}
         \centering
-        \includegraphics[width=0.8\linewidth]{../images/continuousFreqSpectrum_Cos.png}
+        \includegraphics[width=0.8\linewidth]{continuousFreqSpectrum_Cos.png}
     \end{Figure}
     \textbf{Sine}
     \begin{align*}
@@ -495,7 +495,7 @@
 
     \begin{Figure}
         \centering
-        \includegraphics[width=0.8\linewidth]{../images/continuousFreqSpectrum_Sine.png}
+        \includegraphics[width=0.8\linewidth]{continuousFreqSpectrum_Sine.png}
     \end{Figure}
 
     \textbf{Arbitrary periodic signals}
@@ -506,7 +506,7 @@
     \]
     \begin{Figure}
         \centering
-        \includegraphics[width=\linewidth]{../images/continuousFreqSpectrum_periodic.png}
+        \includegraphics[width=\linewidth]{continuousFreqSpectrum_periodic.png}
     \end{Figure}
 
     \textbf{4.4.2.1 Spectrum of Dirac-$\delta$ Comb function}
@@ -517,7 +517,7 @@
 
     \begin{Figure}
         \centering
-        \includegraphics[width=\linewidth]{../images/comb.png}
+        \includegraphics[width=\linewidth]{comb.png}
     \end{Figure}
 
     \[
@@ -525,7 +525,7 @@
     \]
     \begin{Figure}
         \centering
-        \includegraphics[width=\linewidth]{../images/discreteFreqSpec_comb.png}
+        \includegraphics[width=\linewidth]{discreteFreqSpec_comb.png}
     \end{Figure}
     \begin{align*}
         \Im\{\text{comb}_\lambda(t)\} &= \text{COMB}_\lambda(f)\\
@@ -533,7 +533,7 @@
     \end{align*}
     \begin{Figure}
         \centering
-        \includegraphics[width=\linewidth]{../images/continuousFreqSpectrum_comb.png}
+        \includegraphics[width=\linewidth]{continuousFreqSpectrum_comb.png}
     \end{Figure}
     
     \textbf{\uline{Chapter 5}}
@@ -614,7 +614,7 @@
     where B is defined as the bandwidth of the signal. 
     \begin{Figure}
         \centering
-        \includegraphics[width=\linewidth]{../images/bandlimitedLowpassSignal.png}
+        \includegraphics[width=\linewidth]{bandlimitedLowpassSignal.png}
     \end{Figure}
     \textbf{Bandpass signal}
 
@@ -624,7 +624,7 @@
     where B is defined as the bandwidth of the signal
     \begin{Figure}
         \centering
-        \includegraphics[width=\linewidth]{../images/bandlimitedBandpassSignal.png}
+        \includegraphics[width=\linewidth]{bandlimitedBandpassSignal.png}
     \end{Figure}
     \textbf{5.3.2 Signals with Unrestricted Band}
 
@@ -634,13 +634,13 @@
     The frequency where $|X(f)|=|X(0)|/\sqrt{2}$ first occurs (or where $|X(f)|^2=|X(0)|^2/2$ first occurs) when $f$ is increased from 0 Hz.
     \begin{Figure}
         \centering
-        \includegraphics[width=\linewidth]{../images/3dB_lowpass.png}
+        \includegraphics[width=\linewidth]{3dB_lowpass.png}
     \end{Figure}
 
     \textbf{Bandpass signal:}
     \begin{Figure}
         \centering
-        \includegraphics[width=\linewidth]{../images/3dB_bandpass.png}
+        \includegraphics[width=\linewidth]{3dB_bandpass.png}
     \end{Figure}
     
     \textbf{5.3.2.2 1st-null Bandwidth}
@@ -648,12 +648,12 @@
     \textbf{Lowpass signal: } The frequency at which $|X(f)|=0$ first occurs when $f$ is increased from 0 Hz:
     \begin{Figure}
         \centering
-        \includegraphics[width=\linewidth]{../images/1stNull_lowpass.png}
+        \includegraphics[width=\linewidth]{1stNull_lowpass.png}
     \end{Figure}
     \textbf{Bandpass signal: }
     \begin{Figure}
         \centering
-        \includegraphics[width=\linewidth]{../images/1stNull_bandpass.png}
+        \includegraphics[width=\linewidth]{1stNull_bandpass.png}
     \end{Figure}
 
     \textbf{5.3.2.3 M\% Energy Containment Bandwidth}
@@ -663,12 +663,12 @@
     \textbf{Lowpass:}
     \begin{Figure}
         \centering
-        \includegraphics[width=\linewidth]{../images/MPercentEnergy_lowpass.png}
+        \includegraphics[width=\linewidth]{MPercentEnergy_lowpass.png}
     \end{Figure}
     \textbf{Bandpass:}
     \begin{Figure}
         \centering
-        \includegraphics[width=\linewidth]{../images/MPercentEnergy_bandpass.png}
+        \includegraphics[width=\linewidth]{MPercentEnergy_bandpass.png}
     \end{Figure}
 
     \textbf{5.3.2.4 M\% Power Containment Bandwidth}
@@ -680,7 +680,7 @@
     where $f_p$(Hz) is the fundamental frequency and $c_k$'s are the Fourier series coefficients.
     \begin{Figure}
         \centering
-        \includegraphics[width=\linewidth]{../images/MPercentPower.png}
+        \includegraphics[width=\linewidth]{MPercentPower.png}
     \end{Figure}
     \[
         B = Kf_p
