--- a/CG2023_cheatsheet.tex
+++ b/CG2023_cheatsheet.tex
@@ -12,6 +12,7 @@
 \usepackage{graphicx, float}
 \usepackage{ulem}
 \usepackage{xcolor}
+\usepackage{tgschola}
 
 \let\bar\overline
 \setlength{\columnsep}{0.7em}
@@ -41,6 +42,7 @@
 \newcommand{\invlap}[1]{\mathcal{L}^{-1}\left\{#1\right\}}
 
 \newcommand{\fourier}[1]{\Im\left\{#1\right\}}
+\newcommand{\invfourier}[1]{\Im^{-1}\left\{#1\right\}}
 
 % No spaces before and after math mode
 \expandafter\def\expandafter\normalsize\expandafter{%
@@ -53,6 +55,7 @@
 
 \begin{document}
 \fontsize{7}{9}\selectfont
+\fontfamily{qcs}\selectfont
 \begin{multicols*}{5}
     \textbf{Euler's formula}
     \begin{align*}
@@ -795,11 +798,9 @@
     \textbf{7.1 Impulse Response}
 
     Impulse response, $h(t)$, of a continuous-time LTI system is defined as the response/output of the system when the input is a unit impulse, $\delta(t)$.
-
     \[
         \delta(t) \rightarrow \text{LTI system} \rightarrow h(t)
     \]
-
     where 
 
     \[
@@ -813,7 +814,6 @@
     \end{align*}
 
     Substituting (7.2) into (6.1), 
-
     \begin{align*}
         \begin{split}
             y(t) &= \T[x(t)]\\
@@ -829,7 +829,6 @@
     \]
 
     Sub (7.4) into (4.3):
-
     \begin{align*}
         \begin{split}
             y(t) &= \int_{-\infty}^{\infty}x(\tau)h(t-\tau) d\tau\\
@@ -846,20 +845,17 @@
     \textbf{7.1.1 Step Response}
 
     Step response: the output of the system when input is unit step function
-
     \begin{align*}
         u(t) \rightarrow h(t) \rightarrow o(t) &= \int_{-\infty}^{\infty}h(\tau) u(t-\tau) d \tau\\
         &= \int_{-\infty}^{t}h(\tau) d \tau
     \end{align*}
 
     Step response equals integration of impulse response:
-
     \[
         o(t) = \int_{-\infty}^{t}h(\tau) d\tau
     \]
 
     Impulse response equals differentiation of step response:
-    
     \[
         h(t) = \frac{d}{dt} o(t)
     \]
@@ -867,11 +863,9 @@
     \textbf{7.2 Frequency Response}
 
     The frequency response ($H(f)$) of an LTI system is defined as the Fourier transform of the system impulse response $h(t)$
-
     \[
         H(f) = \fourier{h(t)} = \int_{-\infty}^{\infty} h(t) e^{-j2\pi ft} dt \tag{7.6}
     \]
-
     \begin{align*}
         y(t) &= x(t) * h(t)\\
         Y(f) &= X(f) \cdot H(f) \tag{7.7}
@@ -891,7 +885,6 @@
     \textbf{7.3 Transfer Function}
 
     The transfer function $\tilde{H}(s)$ of an LTI system is defined as the Laplace transform of $h(t)$
-
     \[
         \tilde{H}(s) = \lap{h(t)} = \int_{0}^{\infty}h(t) e^{-st} dt \tag{7.9}
     \]
@@ -934,6 +927,93 @@
 
     where $|\tilde{H}(j \omega)|$ is called the magnitude response
     and $\angle \tilde{H}(j \omega)$ is called the phase response of the system.
+
+    \textbf{7.4 Sinusoidal Response at Steady-State}
+
+    Let system input at steady-state be 
+    
+    \[
+        x(t) = Ae^{j (2\pi f_0t + \psi)} \tag{7.15}
+    \]
+
+    Then
+
+    \[
+        X(f) = Ae^{j\psi}\delta (f-f_0) \tag{7.16}
+    \]
+
+    \[
+        Y(f) = A \left|H(f_0)\right|e^{j(\psi + \angle H(f_0))}\delta(f-f_0) \tag{7.17}
+    \]
+
+    \begin{align*}
+        \begin{split}
+            y(t) &= \invfourier{Y(f)}\\
+            &= A \left|H(f_0)\right|e^{j(2\pi f_0 t + \psi + \angle H(f_0))} 
+        \end{split} \tag{7.18}
+    \end{align*}
+
+    \begin{Figure}
+        \includegraphics[width=0.8\linewidth]{sinusoidalResponseComparison.png}        
+    \end{Figure}
+
+    \begin{Figure}
+        \includegraphics[width=\linewidth]{sinusoidalResponse.png}        
+    \end{Figure}
+
+    \textbf{7.6 LTI Systems Described by Differential Equations}
+
+    LTI systems represented by linear constant-coefficient differential equations have the general form
+    \[
+        \sum_{n=0}^{N}a_n \frac{d^ny(t)}{dt^n} = \sum_{m=0}^{M} b_m \frac{d^mx(t)}{dt^m} \tag{7.21}
+    \]
+
+    where $x(t)$ is input, $y(t)$ is output, and $a_n, b_m$ are real constants.
+
+    \textbf{7.6.1 Transfer Function}
+
+    Applying Laplace to both sides of (7.21) with initial conditions set to 0,
+    \[
+        \sum_{n=0}^{N}a_n \tilde{Y}(s)s^n = \sum_{m=0}^{M} b_m \tilde{X}(s)s^m \tag{7.22}
+    \]
+
+    \begin{align*}
+        \begin{split}
+            \tilde{H}(s) &= \frac{\tilde{Y}(s)}{\tilde{X}(s)}\\
+            &= \left( \left. \sum_{m=0}^{M}b_ms^m \right/ \sum_{n=0}^{N}a_ns^n \right) \\
+            &= \frac{b_Ms^M + b_{M-1}s^{M-1} + \ldots + b_0}{a_Ns^N + a_{N-1}s^{N-1} + \ldots + a_0}
+        \end{split} \tag{7.23a}
+    \end{align*}
+
+    \begin{align*}
+        \begin{split}
+            \tilde{H}(s) &= K\frac{\left(\frac{s}{z_1} + 1\right)\left(\frac{s}{z_2} + 1\right) \ldots \left(\frac{s}{z_M} + 1\right)}{\left(\frac{s}{p_1} + 1\right)\left(\frac{s}{p_2} + 1\right) \ldots \left(\frac{s}{p_N} + 1\right)}\\
+            K &= \frac{a_0}{b_0}
+        \end{split} \tag{7.23b}
+    \end{align*}
+
+    \begin{align*}
+        \begin{split}
+            \tilde{H}(s) &= K'\frac{(s+z_1)(s+z_2)\ldots (s+z_M)}{(s+p_1)(s+p_2)\ldots (s+p_N)} \\
+            K &=  \frac{b_M}{a_N}
+        \end{split} \tag{7.23c}
+    \end{align*}
+
+    $\forall n \in \{1,2, \ldots , N\}$ 
+    \begin{itemize}
+        \item $-p_n$ are roots of the denominator polynomial of $\tilde{H}(s)$
+        \item $\tilde{H}(-p_n) = \infty$
+        \item $-p_n$ are called \textbf{poles} of $\tilde{H}(s)$
+    \end{itemize}
+    $\forall m \in \{1,2, \ldots , M\}$ 
+    \begin{itemize}
+        \item $-z_m$ are roots of the numerator polynomial of $\tilde{H}(s)$
+        \item $\tilde{H}(-z_m) = 0$
+        \item $-z_m$ are called \textbf{zeros} of $\tilde{H}(s)$
+    \end{itemize}
+
+    The system is said to have $N$ poles and $M$ zeros, and the difference $N-M$ is called pole-zero excess.
+
 
 \end{multicols*}
 \end{document}
